RESOLVED FIXED 250711
_WKHitTestResult NSURL properties shouldn't return URLs with empty strings
https://bugs.webkit.org/show_bug.cgi?id=250711
Summary _WKHitTestResult NSURL properties shouldn't return URLs with empty strings
Jeff Miller
Reported 2023-01-17 09:06:33 PST
_WKHitTestResult NSURL properties shouldn't return URLs with empty strings
Attachments
Jeff Miller
Comment 1 2023-01-17 09:06:40 PST
Jeff Miller
Comment 2 2023-01-17 09:13:45 PST
EWS
Comment 3 2023-01-17 11:03:12 PST
Committed 258993@main (c2a073072c5e): <https://commits.webkit.org/258993@main> Reviewed commits have been landed. Closing PR #8723 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.