_WKHitTestResult NSURL properties shouldn't return URLs with empty strings https://bugs.webkit.org/show_bug.cgi?id=250711 <rdar://103933402>

Reviewed by Wenson Hsieh.

_WKHitTestResult's NSURL properties can currently return an NSURL created from an empty string.
Clients typically expect to get back nil in this case.

* Source/WebKit/Shared/API/Cocoa/_WKHitTestResult.mm:
(URLFromString):
(-[_WKHitTestResult absoluteImageURL]):
(-[_WKHitTestResult absolutePDFURL]):
(-[_WKHitTestResult absoluteLinkURL]):
(-[_WKHitTestResult absoluteMediaURL]):
* Tools/TestWebKitAPI/Tests/mac/ContextMenuTests.mm:
(TestWebKitAPI::TEST):
Added a test that verifies the _WKHitTestResult properties above are nil in
_WKContextMenuElementInfo's hitTestResult when right-clicking on a page with no links.

Canonical link: https://commits.webkit.org/258993@main