Source/WebKit/Shared/API/Cocoa/_WKHitTestResult.mm
@@ -42,24 +42,29 @@
     [super dealloc];
 }
 
+static NSURL *URLFromString(const WTF::String& urlString)
+{
+    return urlString.isEmpty() ? nil : [NSURL URLWithString:urlString];
+}
+
 - (NSURL *)absoluteImageURL
 {
-    return [NSURL URLWithString:_hitTestResult->absoluteImageURL()];
+    return URLFromString(_hitTestResult->absoluteImageURL());
 }
 
 - (NSURL *)absolutePDFURL
 {
-    return [NSURL URLWithString:_hitTestResult->absolutePDFURL()];
+    return URLFromString(_hitTestResult->absolutePDFURL());
 }
 
 - (NSURL *)absoluteLinkURL
 {
-    return [NSURL URLWithString:_hitTestResult->absoluteLinkURL()];
+    return URLFromString(_hitTestResult->absoluteLinkURL());
 }
 
 - (NSURL *)absoluteMediaURL
 {
-    return [NSURL URLWithString:_hitTestResult->absoluteMediaURL()];
+    return URLFromString(_hitTestResult->absoluteMediaURL());
 }
 
 - (NSString *)linkLabel
